[package]
name = "cuda-self-model"
version = "0.1.0"
edition = "2021"
description = "Self-awareness with capability calibration"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-self-model"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

